--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -7,7 +7,7 @@
   pages={179--188},
   year={1936},
   publisher={Wiley Online Library}
-}
+},
 
 
 
@@ -17,5 +17,115 @@
   booktitle={Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={319--328},
   year={2015},
+  organization={ACM}
+},
+
+@article{bigGas,
+  title={Reservoir computing compensates slow response of chemosensor arrays exposed to fast varying gas concentrations in continuous monitoring},
+  author={Fonollosa, Jordi and Sheik, Sadique and Huerta, Ram{\'o}n and Marco, Santiago},
+  journal={Sensors and Actuators B: Chemical},
+  volume={215},
+  pages={618--629},
+  year={2015},
+  publisher={Elsevier}
+},
+
+@misc{powerSupply,
+  author={Zhu, X.},
+  title = {Stream Data Mining Repository},
+  howpublished = {\url{http://www.cse.fau.edu/~xqzhu/stream.html}}
+},
+
+
+@misc{usenet,
+  howpublished = {\url{http://kdd.ics.uci.edu/databases/20newsgroups/}}
+},
+
+@article{keren2014geometric,
+  title={Geometric monitoring of heterogeneous streams},
+  author={Keren, Doron and Sagy, Guy and Abboud, Amir and Ben-David, David and Schuster, Assaf and Sharfman, Izchak and Deligiannakis, Antonios},
+  journal={Knowledge and Data Engineering, IEEE Transactions on},
+  volume={26},
+  number={8},
+  pages={1890--1903},
+  year={2014},
+  publisher={IEEE}
+}
+
+@inproceedings{michel2005klee,
+  title={Klee: A framework for distributed top-k query algorithms},
+  author={Michel, Sebastian and Triantafillou, Peter and Weikum, Gerhard},
+  booktitle={Proceedings of the 31st international conference on Very large data bases},
+  pages={637--648},
+  year={2005},
+  organization={VLDB Endowment}
+}
+
+@inproceedings{shah2008handling,
+  title={Handling non-linear polynomial queries over dynamic data},
+  author={Shah, Shetal and Ramamritham, Krithi},
+  booktitle={Data Engineering, 2008. ICDE 2008. IEEE 24th International Conference on},
+  pages={1043--1052},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{huang2007communication,
+  title={Communication-efficient online detection of network-wide anomalies},
+  author={Huang, Ling and Nguyen, XuanLong and Garofalakis, Minos and Hellerstein, Joseph M and Jordan, Michael and Joseph, Anthony D and Taft, Nina and others},
+  booktitle={INFOCOM 2007. 26th IEEE International Conference on Computer Communications. IEEE},
+  pages={134--142},
+  year={2007},
+  organization={IEEE}
+}
+
+@article{sharfman2007geometric,
+  title={A geometric approach to monitoring threshold functions over distributed data streams},
+  author={Sharfman, Izchak and Schuster, Assaf and Keren, Daniel},
+  journal={ACM Transactions on Database Systems (TODS)},
+  volume={32},
+  number={4},
+  pages={23},
+  year={2007},
+  publisher={ACM}
+}
+
+@article{keren2012shape,
+  title={Shape sensitive geometric monitoring},
+  author={Keren, Daniel and Sharfman, Izchak and Schuster, Assaf and Livne, Avishay},
+  journal={Knowledge and Data Engineering, IEEE Transactions on},
+  volume={24},
+  number={8},
+  pages={1520--1535},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{lazerson2015monitoring,
+  title={Monitoring distributed streams using convex decompositions},
+  author={Lazerson, Arnon and Sharfman, Izchak and Keren, Daniel and Schuster, Assaf and Garofalakis, Minos and Samoladas, Vasilis},
+  journal={Proceedings of the VLDB Endowment},
+  volume={8},
+  number={5},
+  pages={545--556},
+  year={2015},
+  publisher={VLDB Endowment}
+}
+
+@inproceedings{kashyap2008efficient,
+  title={Efficient constraint monitoring using adaptive thresholds},
+  author={Kashyap, Srinivas and Ramamirtham, Jeyashankher and Rastogi, Rajeev and Shukla, Pushpraj},
+  booktitle={Data Engineering, 2008. ICDE 2008. IEEE 24th International Conference on},
+  pages={526--535},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{keralapura2006communication,
+  title={Communication-efficient distributed monitoring of thresholded counts},
+  author={Keralapura, Ram and Cormode, Graham and Ramamirtham, Jeyashankher},
+  booktitle={Proceedings of the 2006 ACM SIGMOD international conference on Management of data},
+  pages={289--300},
+  year={2006},
   organization={ACM}
 }
